# AI-x-BDD-Chinese-Chess

./: .gitignore  CMakeLists.txt  CMakeLists_cucumber.txt  PROJECT_COMPLETION.md  PROJECT_STATUS.md  README.md  check_status.sh  generate_cucumber_report.ps1  professional_cucumber_report.html  quick_menu.ps1
cucumber_features/: chinese_chess.feature  step_definitions.cpp
docs/: ARCHITECTURE.md  CUCUMBER_INTEGRATION.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  PROJECT_STATUS.md  setup.md  task.md
features/step_definitions/: chinese_chess_steps.cpp  cucumber_steps.cpp
reports/: bdd_comparison.html  cucumber_report.html  dynamic_test_report.html  final_cucumber_report.html  final_cucumber_results.json  perfect_cucumber_report.html  professional_cucumber_report.html  project_summary.html  real_cucumber_report.html  real_cucumber_results.json  scenarios_report_en.html  test_report.html  test_results.xml
reports/real_cucumber_junit.xml/: TEST-features-chinese_chess.xml
scripts/: check_status.ps1  cucumber.yml  generate_comparison.ps1  generate_cucumber_report.rb  generate_dynamic_report.ps1  generate_english_report.ps1  generate_perfect_report.ps1  generate_report.ps1  generate_scenarios_report.ps1  generate_summary.ps1  run_cucumber_tests.ps1  setup_cucumber.ps1  setup_ultimate_cucumber.ps1
src/game/: Board.cpp  Board.h  Cannon.cpp  Cannon.h  Elephant.cpp  Elephant.h  Game.cpp  Game.h  General.cpp  General.h  Guard.cpp  Guard.h  Horse.cpp  Horse.h  Piece.h  Rook.cpp  Rook.h  Soldier.cpp  Soldier.h
test/: TestFramework.cpp  TestFramework.h  main.cpp
(+2 files in other folders)
